# Rust-crawler

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: crawler.rs  database.rs  domain.rs  env_vars.rs  error.rs  json.rs  main.rs  parsing.rs  server.rs
