[package]
name = "crawler"
version = "0.1.0"
authors = ["mennadyami <mennadyami@hotmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.27"
reqwest = "=0.9.17"
redis = "0.10.0"
url = "1.7.2"
hyper = "0.12.31"
scraper = "0.10.0"
rayon = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.14.1"